--- a/Notebooks/convert CIS to sqlite.ipynb
+++ b/Notebooks/convert CIS to sqlite.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "59c67c0e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'pg_key' from 'config' (/Users/andrealynnbaker/opt/anaconda3/lib/python3.9/site-packages/config/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qt/z1139kj16rq91qs03f19sz2c0000gn/T/ipykernel_90458/733477339.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpsycopg2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpg_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'pg_key' from 'config' (/Users/andrealynnbaker/opt/anaconda3/lib/python3.9/site-packages/config/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
@@ -132,19 +120,7 @@
    "execution_count": 2,
    "id": "461d2a47",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pg_key' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qt/z1139kj16rq91qs03f19sz2c0000gn/T/ipykernel_90458/1301770024.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mengine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'postgresql://postgres:{pg_key}@localhost:5432/cis2018'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pg_key' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "engine = create_engine(f'postgresql://postgres:{pg_key}@localhost:5432/cis2018')\n",
     "connection = engine.connect()"
@@ -157,15 +133,217 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'connection' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qt/z1139kj16rq91qs03f19sz2c0000gn/T/ipykernel_90458/2171199663.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM all_sales_view\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msales_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'connection' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>make</th>\n",
+       "      <th>model</th>\n",
+       "      <th>msrp</th>\n",
+       "      <th>vehicle_type</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>axles</th>\n",
+       "      <th>base_price</th>\n",
+       "      <th>bed_length_inches</th>\n",
+       "      <th>...</th>\n",
+       "      <th>top_speed_mph</th>\n",
+       "      <th>transmission_speeds</th>\n",
+       "      <th>transmission_style</th>\n",
+       "      <th>cruise_control</th>\n",
+       "      <th>auto_reverse_system</th>\n",
+       "      <th>pedestrian_alerting_sound</th>\n",
+       "      <th>blind_spot_monitor</th>\n",
+       "      <th>forward_collision_warning</th>\n",
+       "      <th>keyless_ignition</th>\n",
+       "      <th>pedestrian_auto_emergency_brake</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>82744</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>HONDA</td>\n",
+       "      <td>Fit</td>\n",
+       "      <td>17885</td>\n",
+       "      <td>PASSENGER CAR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Continuously Variable Transmission (CVT)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26575</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>Sentra</td>\n",
+       "      <td>20190</td>\n",
+       "      <td>PASSENGER CAR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47333</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>Titan</td>\n",
+       "      <td>51425</td>\n",
+       "      <td>TRUCK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55794</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>GMC</td>\n",
+       "      <td>Sierra</td>\n",
+       "      <td>59810</td>\n",
+       "      <td>TRUCK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10434</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>CHEVROLET</td>\n",
+       "      <td>Impala</td>\n",
+       "      <td>36187</td>\n",
+       "      <td>PASSENGER CAR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>31395.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>Standard</td>\n",
+       "      <td></td>\n",
+       "      <td>Optional</td>\n",
+       "      <td></td>\n",
+       "      <td>Standard</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  model_year       make   model   msrp   vehicle_type  milage  axles  \\\n",
+       "0  82744      2019.0      HONDA     Fit  17885  PASSENGER CAR       0    NaN   \n",
+       "1  26575      2019.0     NISSAN  Sentra  20190  PASSENGER CAR       0    NaN   \n",
+       "2  47333      2019.0     NISSAN   Titan  51425          TRUCK       0    NaN   \n",
+       "3  55794      2019.0        GMC  Sierra  59810          TRUCK       0    NaN   \n",
+       "4  10434      2019.0  CHEVROLET  Impala  36187  PASSENGER CAR       0    2.0   \n",
+       "\n",
+       "   base_price  bed_length_inches  ... top_speed_mph transmission_speeds  \\\n",
+       "0         NaN                NaN  ...           NaN                 NaN   \n",
+       "1         NaN                NaN  ...           NaN                 NaN   \n",
+       "2         NaN                NaN  ...           NaN                 NaN   \n",
+       "3         NaN                NaN  ...           NaN                 NaN   \n",
+       "4     31395.0                NaN  ...           NaN                 NaN   \n",
+       "\n",
+       "                         transmission_style  cruise_control  \\\n",
+       "0  Continuously Variable Transmission (CVT)                   \n",
+       "1                                         0                   \n",
+       "2                                         0                   \n",
+       "3                                         0                   \n",
+       "4                                         0                   \n",
+       "\n",
+       "  auto_reverse_system  pedestrian_alerting_sound  blind_spot_monitor  \\\n",
+       "0                                                                      \n",
+       "1                                                                      \n",
+       "2                                                                      \n",
+       "3                                                                      \n",
+       "4            Standard                                       Optional   \n",
+       "\n",
+       "   forward_collision_warning keyless_ignition pedestrian_auto_emergency_brake  \n",
+       "0                                                                              \n",
+       "1                                                                              \n",
+       "2                                                                              \n",
+       "3                                                                              \n",
+       "4                                    Standard                                  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enginesql = create_engine('sqlite:///../Resources/CIS_2018_lite.sqlite', echo=True)\n",
+    "enginesql = create_engine('sqlite:///../Resources/CIS_2018_full.sqlite', echo=True)\n",
     "sqlite_connection = enginesql.connect()"
    ]
   },
@@ -199,19 +377,61 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sales_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qt/z1139kj16rq91qs03f19sz2c0000gn/T/ipykernel_90458/1426258238.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sqlite:///../Resources/CIS_2018_lite.sqlite'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msqlite_connection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sales_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-07-09 12:24:18,781 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"sqlite:///../Resources/CIS_2018_full.sqlite\")\n",
+      "2022-07-09 12:24:18,784 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-07-09 12:24:18,785 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"sqlite:///../Resources/CIS_2018_full.sqlite\")\n",
+      "2022-07-09 12:24:18,786 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-07-09 12:24:18,790 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE \"sqlite:///../Resources/CIS_2018_full.sqlite\" (\n",
+      "\t\"index\" BIGINT, \n",
+      "\tid BIGINT, \n",
+      "\tmodel_year FLOAT, \n",
+      "\tmake TEXT, \n",
+      "\tmodel TEXT, \n",
+      "\tmsrp BIGINT, \n",
+      "\tvehicle_type TEXT, \n",
+      "\tmilage BIGINT, \n",
+      "\taxles FLOAT, \n",
+      "\tbase_price FLOAT, \n",
+      "\tbed_length_inches FLOAT, \n",
+      "\tbed_type TEXT, \n",
+      "\tbody_cab_type TEXT, \n",
+      "\tbody_class TEXT, \n",
+      "\tdoors FLOAT, \n",
+      "\tdrive_type TEXT, \n",
+      "\tengine_hp FLOAT, \n",
+      "\ttop_speed_mph FLOAT, \n",
+      "\ttransmission_speeds FLOAT, \n",
+      "\ttransmission_style TEXT, \n",
+      "\tcruise_control TEXT, \n",
+      "\tauto_reverse_system TEXT, \n",
+      "\tpedestrian_alerting_sound TEXT, \n",
+      "\tblind_spot_monitor TEXT, \n",
+      "\tforward_collision_warning TEXT, \n",
+      "\tkeyless_ignition TEXT, \n",
+      "\tpedestrian_auto_emergency_brake TEXT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2022-07-09 12:24:18,790 INFO sqlalchemy.engine.Engine [no key 0.00065s] ()\n",
+      "2022-07-09 12:24:18,804 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-09 12:24:18,806 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_sqlite:///../Resources/CIS_2018_full.sqlite_index\" ON \"sqlite:///../Resources/CIS_2018_full.sqlite\" (\"index\")\n",
+      "2022-07-09 12:24:18,806 INFO sqlalchemy.engine.Engine [no key 0.00054s] ()\n",
+      "2022-07-09 12:24:18,817 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-09 12:24:19,139 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2022-07-09 12:24:22,833 INFO sqlalchemy.engine.Engine INSERT INTO \"sqlite:///../Resources/CIS_2018_full.sqlite\" (\"index\", id, model_year, make, model, msrp, vehicle_type, milage, axles, base_price, bed_length_inches, bed_type, body_cab_type, body_class, doors, drive_type, engine_hp, top_speed_mph, transmission_speeds, transmission_style, cruise_control, auto_reverse_system, pedestrian_alerting_sound, blind_spot_monitor, forward_collision_warning, keyless_ignition, pedestrian_auto_emergency_brake) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2022-07-09 12:24:22,834 INFO sqlalchemy.engine.Engine [generated in 3.00759s] ((0, 82744, 2019.0, 'HONDA', 'Fit', 17885, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Hatchback', 5.0, '4x2', 128.0, None, None, 'Continuously Variable Transmission (CVT)', '', '', '', '', '', '', ''), (1, 26575, 2019.0, 'NISSAN', 'Sentra', 20190, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Sedan', 4.0, '4x2', None, None, None, '0', '', '', '', '', '', '', ''), (2, 47333, 2019.0, 'NISSAN', 'Titan', 51425, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', None, '0', None, None, None, '0', '', '', '', '', '', '', ''), (3, 55794, 2019.0, 'GMC', 'Sierra', 59810, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', 4.0, '4WD/4-Wheel Drive/4x4', None, None, None, '0', '', '', '', '', '', '', ''), (4, 10434, 2019.0, 'CHEVROLET', 'Impala', 36187, 'PASSENGER CAR', 0, 2.0, 31395.0, None, 'Short', '0', 'Sedan', 4.0, '0', None, None, None, '0', '', 'Standard', '', 'Optional', '', 'Standard', ''), (5, 14962, 2019.0, 'FORD', 'Ranger', 42715, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', None, '4WD/4-Wheel Drive/4x4', None, None, None, '0', '', '', '', '', '', '', ''), (6, 16210, 2019.0, 'NISSAN', 'NV200', 25090, 'TRUCK', 0, None, None, None, 'Short', '0', 'Van', None, '4x2', None, None, None, '0', '', '', '', '', '', '', ''), (7, 76715, 2020.0, 'CHEVROLET', 'Malibu', 0, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Sedan', 4.0, '0', None, None, None, '0', '', '', '', '', '', '', '')  ... displaying 10 of 157402 total bound parameter sets ...  (157400, 111397, 2018.0, 'HONDA', 'Civic', 22235, 'PASSENGER CAR', 0, 2.0, 21340.0, None, 'Short', '0', 'Sedan', 4.0, '4x2', 158.0, None, None, 'Continuously Variable Transmission (CVT)', '', 'Standard', '', 'Standard', 'Optional', 'Standard', ''), (157401, 111410, 2018.0, 'FORD', 'F-150', 35183, 'TRUCK', 0, None, None, None, 'Short', 'Extra/Super/ Quad/Double/King/Extended', 'Pickup', None, '4WD/4-Wheel Drive/4x4', 375.0, None, None, '0', '', '', '', '', '', '', ''))\n",
+      "2022-07-09 12:24:24,400 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-09 12:24:24,510 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2022-07-09 12:24:24,511 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
      ]
     }
    ],
    "source": [
-    "sales_df.to_sql('sqlite:///../Resources/CIS_2018_lite.sqlite', sqlite_connection)"
+    "sales_df.to_sql('sqlite:///../Resources/CIS_2018_full.sqlite', sqlite_connection)"
    ]
   },
   {
@@ -247,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
